--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,10 @@ name: CI
 
 on:
   push:
-    branches: ["main"]
+    branches: 
+      - "main"
+    paths:
+      - "docs/**"
   pull_request:
 
 jobs:
@@ -18,5 +21,6 @@ jobs:
           ruby-version: '3.3' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+          working-directory: '${{ github.workspace }}/docs'
       - name: Build with Jekyll
         run: bundle exec jekyll build
